plugins/groovy/testdata/highlighting/ModifiersInPackageAndImportStatements.groovy
@Deprecated <error descr="Package definiton cannot have modifiers">private</error> <error descr="Package definiton cannot have modifiers">final</error> package x;

<warning descr="Unused import">@Deprecated <error descr="Import statement cannot have modifiers">final</error> import java.lang.Object</warning>;